--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Vets</title>
+    <title>Owners</title>
 </head>
 <body>
-    <h1 th:text="'List of Vets'">Vets...</h1>
+    <h1 th:text="'List of Owners'">Owners...</h1>
 </body>
 </html>
